--- a/styles/project/container.scss
+++ b/styles/project/container.scss
@@ -19,7 +19,7 @@
 .tail-sm { margin-bottom: 24rpx; }
 .tail-lg { margin-bottom: 40rpx; }
 .tail8 { margin-bottom: 8rpx; }
-.tail-line { border-bottom-style: solid; border-bottom-width: 1px; border-bottom-color: #f3f3f3; }
+.tail-line { border-bottom-style: solid; border-bottom-width: 1rpx; border-bottom-color: #f3f3f3; }
 .tail-line-light { border-bottom-style: solid; border-bottom-width: 1wx; border-bottom-color: #f9f9f9; }
 
 .jostle { padding-top: 149rpx; justify-content: center; }
